--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(cpp_kyrsovaya)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cpp_kyrsovaya main.cpp
-        test.cpp)
+add_executable(cpp_kyrsovaya main.cpp)
